package edu.hitsz.observer;

public interface FreezeObserver {
    public boolean updateOnFreeze();
}
