@startuml
'https://plantuml.com/class-diagram
title 飞机大战 - 核心实体类继承关系图（完整版）

skinparam classAttributeIconSize 0

' ========================================================================================
'                                    接口定义
' ========================================================================================
interface BombObserver {
    + updateOnBomb(): int
}

interface FreezeObserver {
    + updateOnFreeze(): boolean
    + updateOnUnfreeze(): void
}

interface ShootStrategy <<Strategy>> {
    + Shoot(aircraft: AbstractAircraft, speedSet: int): List<BaseBullet>
}

interface EnemyFactory <<FactoryMethod>> {
    + createEnemy(): AbstractAircraft
}

' ========================================================================================
'                                 抽象基类（飞行物体）
' ========================================================================================
abstract class AbstractFlyingObject {
    # locationX: int
    # locationY: int
    # speedX: int
    # speedY: int
    # image: BufferedImage
    # width: int
    # height: int
    # isValid: boolean

    + AbstractFlyingObject(locationX: int, locationY: int, speedX: int, speedY: int)
    + forward(): void
    + crash(flyingObject: AbstractFlyingObject): boolean
    + setLocation(locationX: double, locationY: double): void
    + getLocationX(): int
    + getLocationY(): int
    + getSpeedY(): int
    + getImage(): BufferedImage
    + getWidth(): int
    + getHeight(): int
    + notValid(): boolean
    + vanish(): void
}

' ========================================================================================
'                                 飞机类层次
' ========================================================================================
abstract class AbstractAircraft {
    # originalSpeedX: int
    # originalSpeedY: int
    # originalShootNum: int
    # maxHp: int
    # hp: int
    # shootNum: int
    # power: int
    # direction: int
    # shootStrategy: ShootStrategy
    # score: int

    + AbstractAircraft(locationX: int, locationY: int, speedX: int, speedY: int, hp: int)
    + decreaseHp(decrease: int): void
    + increaseHp(increase: int): void
    + getHp(): int
    + getShootNum(): int
    + getPower(): int
    + getDirection(): int
    + getOriginalShootNum(): int
    + setShootNum(shootNum: int): void
    + setShootStrategy(shootStrategy: ShootStrategy): void
    + getScore(): int
    + {abstract} shoot(): List<BaseBullet>
    + {abstract} createBullet(x: int, y: int, speedX: int, speedY: int, power: int): BaseBullet
    + dropProps(): List<AbstractProp>
    + {abstract} updateOnUnfreeze(): void
}

class HeroAircraft <<Singleton>> {
    - {static} instance: HeroAircraft <<volatile>>
    - currentBuffPriority: int
    - buffVersion: int

    - HeroAircraft(locationX: int, locationY: int, speedX: int, speedY: int, hp: int)
    + {static} getInstance(): HeroAircraft
    + resetForNewGame(): void
    + applyBuff(priority: int): int
    + clearBuff(version: int): void
    + forward(): void
    + shoot(): List<BaseBullet>
    + createBullet(x: int, y: int, speedX: int, speedY: int, power: int): BaseBullet
}

class MobEnemy {
    + MobEnemy(locationX: int, locationY: int, speedX: int, speedY: int, hp: int)
    + forward(): void
    + shoot(): List<BaseBullet>
    + createBullet(...): BaseBullet
    + updateOnBomb(): int
    + updateOnFreeze(): boolean
    + updateOnUnfreeze(): void
}

class EliteEnemy {
    + EliteEnemy(locationX: int, locationY: int, speedX: int, speedY: int, hp: int)
    + forward(): void
    + shoot(): List<BaseBullet>
    + createBullet(...): BaseBullet
    + dropProps(): List<AbstractProp>
    + updateOnBomb(): int
    + updateOnFreeze(): boolean
    + updateOnUnfreeze(): void
}

class ElitePlusEnemy {
    + ElitePlusEnemy(locationX: int, locationY: int, speedX: int, speedY: int, hp: int)
    + forward(): void
    + shoot(): List<BaseBullet>
    + createBullet(...): BaseBullet
    + dropProps(): List<AbstractProp>
    + updateOnBomb(): int
    + updateOnFreeze(): boolean
    + updateOnUnfreeze(): void
}

class EliteProEnemy {
    + EliteProEnemy(locationX: int, locationY: int, speedX: int, speedY: int, hp: int)
    + forward(): void
    + shoot(): List<BaseBullet>
    + createBullet(...): BaseBullet
    + dropProps(): List<AbstractProp>
    + updateOnBomb(): int
    + updateOnFreeze(): boolean
    + updateOnUnfreeze(): void
}

class BossEnemy {
    + BossEnemy(locationX: int, locationY: int, speedX: int, speedY: int, hp: int)
    + forward(): void
    + shoot(): List<BaseBullet>
    + createBullet(...): BaseBullet
    + dropProps(): List<AbstractProp>
    + updateOnBomb(): int
    + updateOnFreeze(): boolean
    + updateOnUnfreeze(): void
}

' ========================================================================================
'                                    子弹类层次
' ========================================================================================
abstract class BaseBullet {
    - power: int

    + BaseBullet(locationX: int, locationY: int, speedX: int, speedY: int, power: int)
    + forward(): void
    + getPower(): int
}

class HeroBullet {
    + HeroBullet(locationX: int, locationY: int, speedX: int, speedY: int, power: int)
}

class EnemyBullet {
    + EnemyBullet(locationX: int, locationY: int, speedX: int, speedY: int, power: int)
}

' ========================================================================================
'                                    道具类层次
' ========================================================================================
abstract class AbstractProp {
    + AbstractProp(locationX: int, locationY: int, speedX: int, speedY: int)
    + forward(): void
    + {abstract} effect(heroAircraft: HeroAircraft): int
}

class BloodProp {
    + BloodProp(locationX: int, locationY: int, speedX: int, speedY: int)
    + effect(heroAircraft: HeroAircraft): int
}

class BombProp {
    + BombProp(locationX: int, locationY: int, speedX: int, speedY: int)
    + effect(heroAircraft: HeroAircraft): int
}

class BulletProp {
    + BulletProp(locationX: int, locationY: int, speedX: int, speedY: int)
    + effect(heroAircraft: HeroAircraft): int
}

class BulletPlusProp {
    + BulletPlusProp(locationX: int, locationY: int, speedX: int, speedY: int)
    + effect(heroAircraft: HeroAircraft): int
}

class FreezeProp {
    + FreezeProp(locationX: int, locationY: int, speedX: int, speedY: int)
    + effect(heroAircraft: HeroAircraft): int
}

' ========================================================================================
'                              射击策略类层次（策略模式）
' ========================================================================================
class NullShootStrategy {
    + Shoot(aircraft: AbstractAircraft, speedSet: int): List<BaseBullet>
}

class StraightShootStrategy {
    + Shoot(aircraft: AbstractAircraft, speedSet: int): List<BaseBullet>
}

class ScatterShootStrategy {
    + Shoot(aircraft: AbstractAircraft, speedSet: int): List<BaseBullet>
}

class RingShootStrategy {
    + Shoot(aircraft: AbstractAircraft, speedSet: int): List<BaseBullet>
}

' ========================================================================================
'                           敌机工厂类层次（工厂方法模式）
' ========================================================================================
class MobEnemyFactory {
    + createEnemy(): AbstractAircraft
}

class EliteEnemyFactory {
    + createEnemy(): AbstractAircraft
}

class ElitePlusEnemyFactory {
    + createEnemy(): AbstractAircraft
}

class EliteProEnemyFactory {
    + createEnemy(): AbstractAircraft
}

class BossEnemyFactory {
    + createEnemy(): AbstractAircraft
}

' ========================================================================================
'                           道具工厂（简单工厂模式）
' ========================================================================================
class PropFactory <<SimpleFactory>> {
    + {static} createProp(type: String, x: int, y: int): AbstractProp
}

' ========================================================================================
'                           泛化关系（继承）- 实线三角箭头
' ========================================================================================
AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet
AbstractFlyingObject <|-- AbstractProp

AbstractAircraft <|-- HeroAircraft
AbstractAircraft <|-- MobEnemy
AbstractAircraft <|-- EliteEnemy
AbstractAircraft <|-- ElitePlusEnemy
AbstractAircraft <|-- EliteProEnemy
AbstractAircraft <|-- BossEnemy

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

AbstractProp <|-- BloodProp
AbstractProp <|-- BombProp
AbstractProp <|-- BulletProp
AbstractProp <|-- BulletPlusProp
AbstractProp <|-- FreezeProp

' ========================================================================================
'                           实现关系 - 虚线三角箭头
' ========================================================================================
BombObserver <|.. AbstractAircraft
FreezeObserver <|.. AbstractAircraft

ShootStrategy <|.. NullShootStrategy
ShootStrategy <|.. StraightShootStrategy
ShootStrategy <|.. ScatterShootStrategy
ShootStrategy <|.. RingShootStrategy

EnemyFactory <|.. MobEnemyFactory
EnemyFactory <|.. EliteEnemyFactory
EnemyFactory <|.. ElitePlusEnemyFactory
EnemyFactory <|.. EliteProEnemyFactory
EnemyFactory <|.. BossEnemyFactory

' ========================================================================================
'                           关联关系 - 实线箭头
' ========================================================================================
AbstractAircraft --> ShootStrategy : shootStrategy

' ========================================================================================
'                           依赖关系 - 虚线箭头
' ========================================================================================
AbstractProp ..> HeroAircraft : <<use>> effect()
PropFactory ..> AbstractProp : <<create>>
MobEnemyFactory ..> MobEnemy : <<create>>
EliteEnemyFactory ..> EliteEnemy : <<create>>
ElitePlusEnemyFactory ..> ElitePlusEnemy : <<create>>
EliteProEnemyFactory ..> EliteProEnemy : <<create>>
BossEnemyFactory ..> BossEnemy : <<create>>

@enduml